Actualizada la bibliografía

--- a/Lebrixen.bib
+++ b/Lebrixen.bib
@@ -4,6 +4,37 @@
 	author = {Stuart Russell and Peter Norvig}
 },
 
+@misc{_intelligent_????,
+	title = {An intelligent multilingual information browsing and retrieval system using information extraction},
+	url = {http://portal.acm.org/citation.cfm?id=974606},
+	howpublished = {http://portal.acm.org/citation.cfm?id=974606}
+},
+
+@techreport{isidoro_gil_leiva_el_????,
+	title = {{EL} {PROCESAMIENTO} {DEL} {LENGUAJE} {NATURAL}  {APLICADO} {AL} {ANÁLISIS} {DEL} {CONTENIDO}      {DE} {LOS} {DOCUMENTOS}},
+	abstract = {   Se presentan las técnicas del procesamiento del lenguaje natural a través de
+su definición, desarrollo histórico, niveles de análisis, así como algunos de los
+problemas que surgen en el análisis automático de textos utilizando estas técnicas.
+Posteriormente, se muestran las distintas aplicaciones del procesamiento del len-
+guaje, exponiendo más extensamente, las dirigidas al análisis del contenido docu-
+mental, es decir, la elaboración automática de resúmenes y la indización automáti-
+ca de documentos. Finalmente, se 
+emiten las conclusiones.
+},
+	institution = {Universidad de Murcia},
+	author = {Isidoro {GIL} {LEIVA} and José Vicente {RODRÍGUEZ} MuÑoz}
+},
+
+@misc{megumi_kameyana_information_????,
+	title = {Information Extraction Across Linguistic Barriers},
+	author = {Megumi Kameyana},
+	annote = {Para hacer extracción translingüe, se podría usar traducción de máquina primero y luego hacer el {IE;} {PERO}  esto tarda mucho tiempo y es mucho el precio a pagar por lo poco que en realidad se ocupa traducido, otro orden es primero {IE} y luego {MT,} pero, claro, se ocuparía tener una manera de hacer {IE} en el lenguaje de entrada.}
+},
+
+@misc{_bcs-03-cheltenham.ppt_????,
+	title = {bcs-03-cheltenham.ppt}
+},
+
 @misc{_aitopics_????,
 	title = {{AITopics} / {NaturalLanguage}},
 	url = {http://www.aaai.org/AITopics/pmwiki/pmwiki.php/AITopics/NaturalLanguage},
@@ -14,15 +45,30 @@
 @misc{_el_????,
 	title = {El Procesamiento del Lenguaje Natural en la Recuperación de Información Textual y áreas afines},
 	url = {http://www.hipertext.net/web/pag277.htm},
-	howpublished = {http://www.hipertext.net/web/pag277.htm}
+	keywords = {{LecturaIntroductoria}},
+	howpublished = {http://www.hipertext.net/web/pag277.htm},
+	annote = {Conceptos interesantes:
+Silencio documental: debido a la polisemia (distintas maneras de significar lo mismo)
+Ruido Documental: debido a la sinonimia
+Problemas: Morfológicos (debido a los distintos roles morfosintácticos que puede tener). Sintácticos (distintos árboles de derivación) y Semánticos (debido a los varios sentidos de una frase); Pragmático (por el contexto)
+ }
 },
 
-@misc{_el_????-1,
-	title = {El Procesamiento del Lenguaje Natural en la Recuperación de Información Textual y áreas afines},
-	url = {http://www.hipertext.net/web/pag277.htm}
+@misc{_usinglanguage_????,
+	title = {{USING} A {LANGUAGE} {INDEPENDENT} {DOMAIN} {MODEL} {FOR} {MULTILINGUAL} {INFORMATION} {EXTRACTION} - Applied Artificial Intelligence: An International Journal},
+	url = {http://www.informaworld.com/smpp/content~content=a713802420&db=all},
+	keywords = {{ArtículoPagado}},
+	howpublished = {http://www.informaworld.com/smpp/content{\textasciitilde}content=a713802420\&db=all}
 },
 
-@misc{_zotero_????,
-	title = {Zotero - Guía rápida},
-	url = {http://www.zotero.org/documentation/quick_start_guide}
+@misc{jason_eisner_current_????,
+	type = {Lecture},
+	title = {Current and Future {NLP} Research},
+	author = {Jason Eisner},
+	keywords = {{LecturaIntroductoria}},
+	annote = {Conceptos interesantes:
+{"Allow} queries over meanings, not sentences"
+},
+	annote = {Es un overview de lo que se ha hecho en {NLP,} qué aplicaciones serían buenas, qué dificultades hay. Buena lectura introductoria
+}
 }
