actualizada la bibliografía

--- a/Lebrixen.bib
+++ b/Lebrixen.bib
@@ -4,10 +4,28 @@
 	author = {Stuart Russell and Peter Norvig}
 },
 
+@misc{_concept_????,
+	title = {Concept matching of natural language queries with a database of document concepts - Patent 5418948},
+	url = {http://www.freepatentsonline.com/5418948.html},
+	howpublished = {http://www.freepatentsonline.com/5418948.html}
+},
+
 @misc{_intelligent_????,
 	title = {An intelligent multilingual information browsing and retrieval system using information extraction},
 	url = {http://portal.acm.org/citation.cfm?id=974606},
 	howpublished = {http://portal.acm.org/citation.cfm?id=974606}
+},
+
+@misc{_concept-based_????,
+	title = {{Concept-Based} Retrieval using Controlled Natural Language},
+	url = {http://74.125.47.132/search?q=cache:LxEA0_LvNaAJ:www.cs.sfu.ca/people/Faculty/Dahl/papers/concept.ps+natural+language+processing+generate+concept+hierarchy&cd=12&hl=es&ct=clnk&gl=hn},
+	howpublished = {{http://74.125.47.132/search?q=cache:LxEA0\_LvNaAJ:www.cs.sfu.ca/people/Faculty/Dahl/papers/concept.ps+natural+language+processing+generate+concept+hierarchy\&cd=12\&hl=es\&ct=clnk\&gl=hn}}
+},
+
+@misc{_generating_????,
+	title = {Generating better concept hierarchies using automatic document classification},
+	url = {http://portal.acm.org/citation.cfm?id=1099627&dl=GUIDE&coll=GUIDE&CFID=71897358&CFTOKEN=72145875},
+	howpublished = {{http://portal.acm.org/citation.cfm?id=1099627\&dl=GUIDE\&coll=GUIDE\&CFID=71897358\&CFTOKEN=72145875}}
 },
 
 @techreport{isidoro_gil_leiva_el_????,
@@ -22,7 +40,8 @@ ca de documentos. Finalmente, se
 emiten las conclusiones.
 },
 	institution = {Universidad de Murcia},
-	author = {Isidoro {GIL} {LEIVA} and José Vicente {RODRÍGUEZ} MuÑoz}
+	author = {Isidoro {GIL} {LEIVA} and José Vicente {RODRÍGUEZ} MuÑoz},
+	annote = {Trata extensamente conceptos de lingüistica computacional, introduce aplicaciones clásicas y se extiende en dos: Generación de resúmenes e indización de documentos, de las cuales, obviamente, es la última la que me interesa. Empieza con ello en la página 9.}
 },
 
 @misc{megumi_kameyana_information_????,
@@ -35,11 +54,24 @@ emiten las conclusiones.
 	title = {bcs-03-cheltenham.ppt}
 },
 
+@techreport{mara_cruz_rubio_liners_ellisis_????,
+	title = {{EL} {ANÁLISIS} {DOCUMENTAL:} {INDIZACIÓN} Y {RESUMEN}
+ {EN} {BASES} {DE} {DATOS} {ESPECIALIZADAS}
+},
+	author = {María Cruz Rubio Liners}
+},
+
 @misc{_aitopics_????,
 	title = {{AITopics} / {NaturalLanguage}},
 	url = {http://www.aaai.org/AITopics/pmwiki/pmwiki.php/AITopics/NaturalLanguage},
 	howpublished = {{http://www.aaai.org/AITopics/pmwiki/pmwiki.php/AITopics/NaturalLanguage}},
 	annote = {Usarlo como base para futuras referencias}
+},
+
+@misc{_concept-based_????-1,
+	title = {Concept-based search and retrieval system - {US} Patent 6675159 Full Text},
+	url = {http://www.patentstorm.us/patents/6675159/fulltext.html},
+	howpublished = {http://www.patentstorm.us/patents/6675159/fulltext.html}
 },
 
 @misc{_el_????,
@@ -59,6 +91,20 @@ Problemas: Morfológicos (debido a los distintos roles morfosintácticos que pue
 	url = {http://www.informaworld.com/smpp/content~content=a713802420&db=all},
 	keywords = {{ArtículoPagado}},
 	howpublished = {http://www.informaworld.com/smpp/content{\textasciitilde}content=a713802420\&db=all}
+},
+
+@misc{_spanish_????,
+	title = {Spanish stemming algorithm},
+	url = {http://snowball.tartarus.org/algorithms/spanish/stemmer.html},
+	howpublished = {http://snowball.tartarus.org/algorithms/spanish/stemmer.html}
+},
+
+@article{alexander_gelbukh_document_????,
+	title = {Document Indexing with a Concept Hierarchy},
+	volume = {8},
+	number = {4},
+	journal = {Computación y Sistemas},
+	author = {Alexander Gelbukh and Grigori Sidorov and Adolfo {Guzmán-Arenas}}
 },
 
 @misc{jason_eisner_current_????,
