actualizadas bibliografía y propuesta, agregado el paper de por qué el NLP no sirve para IR

--- a/Lebrixen.bib
+++ b/Lebrixen.bib
@@ -4,6 +4,12 @@
 	author = {Stuart Russell and Peter Norvig}
 },
 
+@misc{_ir_????,
+	title = {{IR} \& {NLP} Course},
+	url = {http://nlp.uned.es/~ircourse/},
+	howpublished = {http://nlp.uned.es/{\textasciitilde}ircourse/}
+},
+
 @misc{_concept_????,
 	title = {Concept matching of natural language queries with a database of document concepts - Patent 5418948},
 	url = {http://www.freepatentsonline.com/5418948.html},
@@ -50,6 +56,42 @@ emiten las conclusiones.
 	annote = {Para hacer extracción translingüe, se podría usar traducción de máquina primero y luego hacer el {IE;} {PERO}  esto tarda mucho tiempo y es mucho el precio a pagar por lo poco que en realidad se ocupa traducido, otro orden es primero {IE} y luego {MT,} pero, claro, se ocuparía tener una manera de hacer {IE} en el lenguaje de entrada.}
 },
 
+@misc{_corpus_????,
+	title = {Corpus Profiling {\textbar} Corpus Profiling for Information Retrieval and Natural Language Processing},
+	url = {http://kmi.open.ac.uk/events/corpus-profiling/accepted-papers.php},
+	howpublished = {http://kmi.open.ac.uk/events/corpus-profiling/accepted-papers.php}
+},
+
+@misc{thorsten_brants_natural_????,
+	title = {Natural Language Processing in Information Retrieval},
+	abstract = {Many Natural Language Processing {(NLP)} techniques have been used in Information Re-
+trieval. The results are not encouraging. Simple methods (stopwording, porter-style stem-
+ming, etc.) usually yield significant improvements, while higher-level processing (chunk-
+ing, parsing, word sense disambiguation, etc.) only yield very small improvements or even
+a decrease in accuracy. At the same time, higher-level methods increase the processing and
+storage cost dramatically. This makes them hard to use on large collections. We review
+{NLP} techniques and come to the conclusion that (a) {NLP} needs to be optimized for {IR} in
+order to be effective and (b) document retrieval is not an ideal application for {NLP,} at least
+given the current state-of-the-art in {NLP.} Other {IR-related} tasks, e.g., question answering
+and information extraction, seem to be better suited.},
+	author = {Thorsten Brants},
+	keywords = {{LecturaIntroductoria}},
+	annote = {A explorar:
+"   An interesting research question is the automatic detection of when to use stem-
+ming in order to avoid overstemming and understemming. Previous research sug-
+gests that the effect depends on the baseline system and the data used. Therefore,
+stemming should be learned and optimized jointly with the {IR} system.
+"
+
+"    Instead of making hard decisions and selecting particular parts-of-speech for
+indexing, one could assign weights depending on the part-of-speech. But we are
+not aware of a study that used this technique for retrieval.
+"
+},
+	annote = {Interesante:
+Muestra por qué la remoción de stopwords y el stemming pueden, más bien, afectar la búsqueda}
+},
+
 @misc{_bcs-03-cheltenham.ppt_????,
 	title = {bcs-03-cheltenham.ppt}
 },
@@ -91,6 +133,12 @@ Problemas: Morfológicos (debido a los distintos roles morfosintácticos que pue
 	url = {http://www.informaworld.com/smpp/content~content=a713802420&db=all},
 	keywords = {{ArtículoPagado}},
 	howpublished = {http://www.informaworld.com/smpp/content{\textasciitilde}content=a713802420\&db=all}
+},
+
+@misc{_high_????,
+	title = {High Precision Information Retrieval with Natural Language Processing Techniques by Lenny Zeltser et al.},
+	url = {http://zeltser.com/info-retrieval/},
+	howpublished = {http://zeltser.com/info-retrieval/}
 },
 
 @misc{_spanish_????,
